typecheck adventures with unification (redux)